--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -43,7 +43,7 @@
 }
 
 .select_course .course a span img {
-  height:5rem;
+  height:5rem!important;
   border-radius: 1.5rem;
   margin-bottom:0.5rem;
 }
