--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -290,3 +290,12 @@ em {
   border-radius: 1rem;
   padding:1rem;
 }
+
+.notibox_yellow {
+  background-color:#fff498;
+  padding:1rem;
+  border-radius:1.5rem;
+  font-size:0.8rem;
+  letter-spacing:-0.01rem;
+  line-height:1rem;
+}
