--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -87,7 +87,16 @@
   flex-wrap: wrap; 
 }
 
-.custom-radio-group .custom-radio { 
+.custom-radio-group.row { 
+  gap: 0rem;
+}
+.custom-radio-group.row label.radio-desc {
+  margin:0 0.5rem 0 0.5rem;
+  display:flex;
+  margin-left:-0.2rem
+}
+
+.custom-radio {
   width: 1.4rem;
   height: 1.4rem;
   display: flex;
@@ -97,15 +106,6 @@
   flex-shrink: 0;
 }
 
-.custom-radio {
-  width: 1.4em;
-  height: 1.4rem;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  position: relative;
-}
 
 .custom-radio input[type="radio"] {
   display: none;
