--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -178,6 +178,19 @@ em {
   font-style: normal;
 }
 
+textarea {
+  width:100%;
+  border-radius:1.5rem;
+  padding:1rem;
+  border:1px solid #ddd;
+}
+.textarea_count {
+  text-align: right;
+  font-size: 0.8rem;
+  color: #999;
+  margin-top:0rem;
+}
+
 .mt1 {margin-top:1rem;}
 
 .warn-message,
