--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -53,9 +53,9 @@
  }
 
 .popup_wrap .popup_inner {
-	margin: 0 0 8rem 0;
+	margin: 0 0 7rem 0;
 	background-color:#fff;
-	padding:1.5rem;
+	padding:0 1.5rem 0 1.5rem;
   border-radius:1.5rem;
   border:1px solid #eee;
 	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
@@ -78,7 +78,7 @@
 
 .popup_wrap h3 {
 	font-size:1.2rem;
-	margin-bottom:1rem;
+	margin:2rem 0 1rem 0;
 }
 
 .popup_wrap .popup_btm {
@@ -97,12 +97,13 @@
 }
 
 .form_box_g {
-	margin-bottom:1rem;
+	margin-bottom:0.5rem;
 }
 
 .form_box_g input[type="text"] {
 	width:100%;
 	text-align:center;
+	margin:0;
 }
 
 .form_box_g .detail_box {
@@ -212,6 +213,44 @@
 .form_box_g textarea.comment {
 	height:8rem
 }
+
+.form_box_g .color_selecter {
+ 	display: grid;
+  grid-template-columns: repeat(5, auto); /* 한 줄에 5개 */
+  justify-content: center;                /* form_box_g 안에서 가운데 정렬 */
+  gap: 1rem;
+  border-radius: 1.5rem;
+  padding: 0.5rem;
+  background-color: #f5f5f5;
+	padding:1rem
+}
+
+.form_box_g .color_selecter [class^="color_picker"] {
+  flex: 0 0 auto;         
+  width: 2rem;
+  aspect-ratio: 1 / 1;     
+  border-radius: 50%;
+  margin-right: 0;
+	background-color:#ddd;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+	cursor:pointer;
+  cursor: pointer;
+  transition: opacity 0.2s ease, box-shadow 0.2s ease;
+}
+
+.form_box_g .color_selecter [class^="color_picker"].on {
+  opacity: 1;
+}
+
+.form_box_g .color_selecter [class^="color_picker"].dimmed {
+  opacity: 0.2;
+}
+
+
+.form_box_g .color_selecter [class^="color_picker"]:last-child {
+  margin-right: 0;
+}
+
 
 /* 달력 */
 .form_box_g .detail_box.monthly {
