--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -18,7 +18,7 @@
   max-width: 20rem;
 	position:relative;
   background: #fff;
-  padding: 1.5rem;
+  padding: 1.5rem!important;
   border-radius: 1rem;
 	margin:0!important;
 	border:none!important
