--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,55 +1,8 @@
 /*  공통 스타일 */
-.wheel-wrapper {
-  position: relative;
-  width: 80px;
-  height: 128px;
+.scroll-picker {
+  border:1px solid red
 }
 
-.wheel-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  scroll-snap-type: y mandatory;
-  text-align: center;
-  -webkit-overflow-scrolling: touch;
-  scroll-behavior: auto; /* 기본 스크롤 속도 빠르게 */
-}
-
-.wheel-container::-webkit-scrollbar {
-  display: none;
-}
-
-.wheel-item {
-  height: 40px;
-  line-height: 40px;
-  font-size: 16px;
-  scroll-snap-align: center;
-  color: #aaa;
-}
-
-.wheel-item.selected {
-  font-size: 18px;
-  color: #000;
-  font-weight: 600;
-}
-
-.spacer {
-  height: 44px;
-}
-
-.highlight {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  height: 40px;
-  transform: translateY(-50%);
-  border-radius: 20px;
-  background: rgba(0, 0, 0, 0.05);
-  pointer-events: none;
-  z-index: 5;
-}
 /* 체크 박스 */
 .checkbox-label {
   display: flex;
