--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,8 +1,43 @@
-/*  공통 스타일 */
+/*  휠피커 스타일 */
 .scroll-picker {
-  border:1px solid red
+  position: relative;
+  height: 200px;
+  overflow: hidden;
+  text-align: center;
+  -webkit-mask-image: -webkit-gradient(linear, left 30%, left 70%, from(rgba(0,0,0,0)), color-stop(0.2, rgba(0,0,0,1)), color-stop(0.8, rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 30%, rgba(0,0,0,1) 70%, rgba(0,0,0,0) 100%);
 }
 
+.scroll-picker-scroller {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  overflow-y: scroll;
+  height: 100%;
+  scroll-snap-type: y mandatory;
+  -webkit-overflow-scrolling: touch;
+}
+
+.scroll-picker-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.scroll-picker-item {
+  height: 40px;
+  line-height: 40px;
+  font-size: 16px;
+  color: #999;
+  scroll-snap-align: center;
+}
+
+.scroll-picker-item.selected {
+  color: #333;
+  font-weight: bold;
+  font-size: 18px;
+}
 /* 체크 박스 */
 .checkbox-label {
   display: flex;
