--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,6 +1,6 @@
 /*  휠피커 스타일 */
 .vue-scroll-picker {
-  background-color:transparent
+  background-color:#f9f9f9
 }
 .vue-scroll-picker-wrapper {
   background-color:green!important
