--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -5,7 +5,7 @@
   height: 100%;
   overflow: hidden;
   touch-action: pan-y;
-  background-color:blue
+  background-color:#f9f9f9
 }
 
 .vue-scroll-picker-wrapper {
