--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -63,10 +63,11 @@
 .vue-scroll-picker-layer-top {
   box-sizing: border-box;
   border-bottom:none!important;
-  background: linear-gradient(180deg,transparent 80%,#fff)!important;
+  background: linear-gradient(180deg,transparent 50%,#fff)!important;
   top: 0;
   height: calc(50% - 1em);
   cursor: pointer;
+  background-color:red!important
 }
 
 .vue-scroll-picker-layer-selection {
@@ -76,7 +77,7 @@
 
 .vue-scroll-picker-layer-bottom {
   border-top:none!important;
-  background: linear-gradient(0deg,transparent 80%,#fff)!important;
+  background: linear-gradient(0deg,transparent 50%,#fff)!important;
   bottom: 0;
   height: calc(50% - 1em);
   cursor: pointer;
