--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -72,7 +72,7 @@
 .vue-scroll-picker-layer-selection {
   top: calc(50% - 1em);
   bottom: calc(50% - 1em);
-  background-color:#333!importan;
+  background-color:#333!important;
   border:1px solid red!important;
   color:#fff!important;
   border-radius:1rem;
