--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -28,10 +28,10 @@
 }
 
 .vue-scroll-picker-item[aria-selected='true'] {
-  color: #000!important;
+  color: #fff!important;
   font-weight:bold;
-  font-size:1.4rem!important
-  
+  font-size:1.4rem!important;
+  height:2rem!important;  
 }
 
 .vue-scroll-picker-item[data-value=''],
@@ -73,10 +73,9 @@
   top: calc(50% - 1em);
   bottom: calc(50% - 1em);
   background-color:#333!important;
-  border:1px solid red!important;
   color:#fff!important;
-  border-radius:1rem;
-  height:2rem;
+  border-radius:0.5rem!important;
+  height:2rem!important;
 }
 
 .vue-scroll-picker-layer-bottom {
