--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -74,7 +74,7 @@
 .vue-scroll-picker-layer-selection {
   top: calc(50% - 1em);
   bottom: calc(50% - 1em);
-  background-color:#333!important;
+  background-color:red!important;
   color:#fff!important;
   border-radius:0.5rem!important;
   height:2rem!important;
