--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,567 +1,6 @@
-/* lnb */
-.lnb_wrap {
-	width:80%;
-	height:100%;
-	background-color:#fff;
-	position:absolute;
-	top:0;
-	left:0;
-	padding:2rem;
+#header,
+#footer,
+#lnb,
+#main_wrap {
+  background-color:#fafafa;
 }
-
-/* 오늘의 달성 현황 */
-.done_check_pop {
-	width:100%;
-  max-width:20rem;
-  min-width:20rem;
-	height:100%;
-	margin-top:1rem;
-}
-
-.done_check_pop .check_wrap {
-  width:100%;
-	font-size:1.2rem;
-	line-height:1.2rem;
-	text-align:left;
-}
-
-.done_check_pop .check_wrap p {
-	margin-bottom:1rem
-}
-
-.done_check_pop .check_wrap .pretty-radio {
-	width:1.5rem;
-	height:1.5rem;
-	margin-top:-0.2rem;
-}
-
-.done_check_pop .check_wrap p.comment {
-	margin-top:0.5rem;
-	background-color:#fff8da;
-	border-radius:1rem;
-	font-size:0.8rem;
-	padding:0.5rem 1rem 0.5rem 1rem;
-	text-align:center;
-	line-height:1.5rem
-}
-
-.done_check_pop .check_wrap p.comment img {
-	width:1.5rem;
-	height:1.5rem;
-	float:left;
-	vertical-align:middle;
-	margin-right:0.3rem;
-}
-
-/* 고정된 전체 레이아웃 */
-.v_container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-}
-
-.v_container,
-.m_header,
-.m_bottom,
-.main_wrap {
-	background-color:#f9f9f9
-}
-
-.m_header {
-  width: 100%;
-	height:3rem;
-  position: fixed;
-	padding:1rem;
-  top: 0;
-  left: 0;
-  text-align: center;
-  z-index: 100;
-}
-
-.m_header .left {
-	float:left
-}
-
-.m_header h1 {
-	display:inline-block;
-	font-family: Freesentation-9Black;
-	font-size:1.5rem;
-}
-
-.m_header .right {
-	float:right
-}
-
-.m_bottom {
-	width:100%;
-  position: fixed;
-	left:0;
-	bottom:0;
-
-}
-
-.m_bottom .goto {
-	width:100%;
-	height:3rem;
-	display:flex;
-	gap:4.5rem;
-	line-height:3rem;
-	padding:0 1rem 0 1rem;
-  justify-content: center;
-}
-
-.m_bottom .goto a {
-	width:2rem;
-	height:2rem;
-	display:inline-block;
-}
-
-.m_bottom .goto a span {
-	display:none
-}
-
-.ad_box {
-	width:100%;
-	text-align:left;
-	padding:2rem;
-}
-
-.ad_box a.buy {
-	width:100%;
-	height:2.5rem;
-	line-height:2.5rem;
-	display:inline-block;
-	margin-top:1rem;
-	font-weight:bold;
-	font-size:1rem;
-	border-radius:1.5rem;
-	border:0.1rem solid #333;
-	background-color:#333;
-	text-align:center;
-	color:#fff
-
-}
-
-.ad_box .ad_inner {
-	width:100%;
-	height:8rem;
-	display:flex;
-	padding:0;
-	margin:0;
-}
-
-.ad_box .ad_inner .left {
-	width: 70%;
-	height:100%;
-  margin: 0;
-	border-radius: 1rem;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-	overflow: hidden;
-}
-
-.ad_box .ad_inner .left .tv_box {
-	width:100%;
-	height:100%;
-}
-
-.ad_box .ad_inner .left .tv_box img,
-.ad_box .ad_inner .left .tv_box iframe {
-	width:100%;
-	height:100%;
-}
-
-.ad_box .right {
-	width:30%;
-	height:100%;
-	position:relative;
-	background-color:#fff;
-	border-radius: 1rem;
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-
-}
-
-.ad_box .right span {
-	width:100%;
-	height:60%;
-	position:absolute;
-	bottom:1rem;
-	right:0rem;
-	display:inline-block
-}
-
-.ad_box .right img {
-	width:100%;
-}
-
-.main_wrap {
-  position: absolute;
-  top: 2rem;
-  left: 0;
-  right: 0;
-  overflow-y: auto;
-}
-
-.main_inner {
-	width: 100%;
-	margin: 0 auto;
-	padding: 1.5rem;
-	margin-bottom:20em;
-}
-
-/* 다짐 현황 박스 */
-.form_box_g.main {
-	text-align:left;
-	box-sizing: border-box;
-	margin-bottom:1rem;
-	border:none;
-	background-color:#fff;
-	position:relative;
-	padding:2rem
-}
-
-.form_box_g.main .setting {
-	width:auto;
-	font-size:1.2rem;
-	line-height:2.2rem;
-	font-weight:bold;
-	letter-spacing:-0.1rem;
-	border:0.1rem solid #333;
-	position:absolute;
-	top:0;
-	right:0;
-	border-radius:1rem;
-	padding:2rem;
-	background-color:#fff;
-}
-
-.form_box_g.main .setting a {
-	color:#333;
-	display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.form_box_g.main .setting a img {
-	width:1.5rem;
-	height:1.5rem;
-}
-
-.form_box_g.main .setting .close_btn {
-	width:2rem;
-	height:2rem;
-	position:absolute;
-	top:0.5rem;
-	right:0.5rem;
-	z-index:1;
-}
-
-.routine_card {
-  display: flex;
-  justify-content: space-between; 
-	align-items: stretch;
-  gap: 1rem; 
-}
-
-.routine_card .left,
-.routine_card .right {
-  flex: 1; 
-}
-
-.routine_card .left {
-	margin-top:-1rem
-}
-
-.routine_card .right {
-  max-width: 6rem; 
-}
-.form_box_g.main.off .left,
-.form_box_g.main.off .right {
-	opacity:0.2;
-	pointer-events: none;
-  z-index:19;
-}
-
-.form_box_g.main .com_btn {
-	width:88%;
-	height:2rem;
-	position:absolute;
-	top:1rem;
-	text-align:right;
-  z-index:20;
-}
-
-.form_box_g.main .com_btn a {
-	width:1.2rem;
-	height:1.2rem;
-	display:inline-block
-}
-
-.form_box_g.main .com_btn a img {
-	width:100%;
-	height:100%;
-}
-
-.form_box_g.main .com_btn .left {
-	float:left
-}
-
-.form_box_g.main .com_btn .left img {
-	width:1.5rem;
-	height:1.5rem;
-}
-
-.form_box_g.main a {
-	display:inline-block;
-}
-
-.form_box_g.main a img {
-	width:2rem;
-	height:2rem;
-}
-
-.form_box_g.main a span {
-	display:none
-}
-
-.form_box_g.main .left em {
-	line-height:1.5rem;
-}
-
-.form_box_g.main .left em a {
-	margin-top:-0.3rem
-}
-
-.form_box_g.main .left .detail_box {
-	font-size:0.9rem;
-	letter-spacing: -0.01rem;
-	margin-top:0.5rem
-}
-
-.form_box_g.main .left .detail_box a {
-	text-decoration: underline;
-}
-
-.form_box_g.main .left .detail_box p.done_icon.pink  {
-	color:#ff7d7d
-}
-
-.form_box_g.main .left .detail_box p.done_icon.green  {
-	color:#009b49
-}
-
-.form_box_g.main .left .detail_box p.done_icon.gray  {
-	color:#b6b6b6
-}
-
-.form_box_g.main .wbtn {
-	width:100%;
-	line-height:2rem;
-	margin-top:1rem;
-	border-radius:1rem;
-}
-
-span.icon.temp {
-	width:1.5rem;
-	height:1.5rem;
-	display:inline-block;
-	vertical-align:middle;
-	margin-right:0.5rem;
-}
-
-.form_box_g.main span[class*='cchart'] {
-	width:1rem;
-	height:1rem;
-	border-radius: 50%;
-	margin-left:0.2rem; 
-}
-
-.form_box_g.main em {
-	font-size:1.2rem;
-	font-weight:bold;
-	line-height:1.2rem;
-	display:inline-block;
-	margin:0.5rem 0 0.5rem 0;
-}
-
-.form_box_g.main em a img {
-	width:1.2rem;
-	height:1.2rem;
-}
-
-.form_box_g.main .right .walking {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: relative;
-}
-
-.form_box_g.main .right .walking [class*="step0"] {
-	width:100%;
-	height:40%;
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-position:50% 50%;
-	padding:0;
-	top:45%;
-}
-
-.form_box_g.main .right .walking .step01 {
-	position:absolute;
-	bottom:1rem;
-}
-
-.form_box_g.main .right .walking a.step {
-	width:100%;
-	height:1.5rem;
-	display:inline-block;
-	position:absolute;
-	text-align:center;
-	left:0;
-	color:#333;
-	border:0.1rem solid #fff55d;
-	background-color:#fff55d;
-	border-radius:1rem;
-	font-size:0.8rem;
-	line-height:1.2rem;
-	font-family: Paperlogy-8ExtraBold;
-}
-
-.form_box_g.main .right .walking span.step strong {
-	color:#ff6600;
-	font-size:0.8rem;
-}
-
-/* 말풍선 */
-.speech-bubble {
-  width: 6rem;
-  height: 6rem;
-  position: absolute;
-  top: 0.5rem;
-  right: 0;
-  display: inline-block;
-  background: url('../images/ruffy_sample03.png') no-repeat top right;
-  background-size: 100%;
-  text-align: center;
-  line-height: 5rem;
-  font-size: 0.7rem;
-  color: #333;
-}
-
-.form_box_g.main .right .speech-bubble span {
-	width:5rem;
-  position: absolute;
-  top: -0.5rem;
-  right: 0.5rem;
-  font-size: 0.9rem;
-  line-height: 1rem;
-	letter-spacing:-0.05rem;
-  word-break: keep-all;
-  white-space: normal;
-  text-align: center;
-	font-family: 'Ownglyph_ParkDaHyun';
-}
-
-.done_check {
-	width:100%;
-	height:5rem;
-	margin-top:1rem;
-	font-size:2rem;
-	text-align:left;
-	line-height:2rem;
-	padding-top:1rem;
-	border-top:0.1rem dotted #eee;
-}
-
-/* 달성현황 */
-.walking span {
-	width:100%;
-	height:1rem;
-	margin:2rem 0 0 0;
-	display:inline-block;
-	font-size:0.8rem;
-	text-align:center;
-}
-
-.walking span em {
-	font-weight:bold;
-	color:#ff6600
-}
-
-.walking p.off span,
-.walking p.off span em {
-	color:#b0b0b0;
-}
-
-.walking [class*="step0"] {
-	width:20%;
-	float:left;
-}
-
-.walking [class*="step0"].off {
-	opacity: 0.3;
-  z-index: -1;
-}
-
-.walking .step01 {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step02 {
-  background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step03 {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step04 {
-  background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step05 {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step01.off {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step02.off {
-  background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step03.off {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step04.off {
-  background:url('../images/walking_step01.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-.walking .step05.off {
-  background:url('../images/walking_step02.jpeg') no-repeat top center / 2rem 2rem;
-}
-
-/* 다짐추가하기 버튼 */
-.add_rout {
-	width:3.5rem;
-	height:3.5rem;
-	position:fixed;
-	bottom:17rem;
-	right:2rem;
-	z-index:1;
-	background-color:#fff;
-	border-radius: 50%;
-}
-
-.add_rout img {
-	width:100%;
-	height:100%
-}
-.add_rout span {
-	display:none
-}
-
