--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,7 +1,7 @@
 #main_wrap {
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-direction: column;
-  height: 100dvh;
   overflow: hidden;
   background-color: #fafafa;
 }
