--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,11 +5,36 @@
   overflow: hidden;
   background-color: #fafafa;
 }
-/**/
+
 #header {
-  height: 60px;
-  flex-shrink: 0;
-  background-color: red;
+  display: flex;
+  width: 100%;
+  height: 5rem;
+  align-items: center;
+  padding: 0 1rem; 
+  box-sizing: border-box;
+}
+
+#header .left,
+#header .right {
+  width: 10%;
+  text-align: center;
+}
+
+#header .title {
+  width: 80%;
+  text-align: center;
+}
+
+#header .title h1 {
+  margin: 0;
+  font-size: 1.2rem;
+}
+
+#header .title p {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #888;
 }
 
 #footer {
