--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -38,9 +38,15 @@
 }
 
 #lnb {
-  width:30%;
-  background-color:#fff;
-  padding:2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 30%;
+  height: calc(var(--vh, 1vh) * 100); /* 전체 높이 */
+  background-color: #fff;
+  padding: 2rem;
+  z-index: 1000; 
+  overflow-y: auto;
 }
 
 #footer {
