--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -30,12 +30,13 @@
 #header .title h1 {
   margin: 0;
   font-size:1.8rem;
-  line-height:1.8rem;
+  line-height:2rem;
 }
 
 #header .title p {
   margin: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
+  letter-spacing:-0.02rem;
 }
 
 #lnb {
