--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -39,11 +39,13 @@
   letter-spacing:-0.02rem;
   display: flex;
   align-items: center;
+  justify-content: center; 
 }
 
 #header .title p span {
-  width:1rem;
-  height:1rem;
+  width:1.5rem;
+  height:1.5rem;
+  margin-right:0.5rem;
   background-color:red;
   display:inline-block;
 }
