--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -34,7 +34,7 @@
 
 #header .title p {
   margin: 0;
-  font-size:0.8rem;
+  font-size:0.9rem;
   letter-spacing:-0.02rem;
   display: flex;
   align-items: center;
@@ -44,9 +44,9 @@
 }
 
 #header .title p span {
-  width:2rem;
-  height:2rem;
-  margin-right:0.3rem;
+  width:1.8rem;
+  height:1.8rem;
+  margin:-0.2rem 0.3rem 0 0;
   display:inline-block;
   font-size:0;
   line-hgith:0;
