--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -10,7 +10,7 @@
   display: flex;
   width: 100%;
   align-items: center;
-  padding:2rem; 
+  padding:2rem 2rem 1.5rem 2rem; 
   box-sizing: border-box;
   border-bottom:1px solid #ddd
 }
