--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -21,10 +21,10 @@
 }
 
 @font-face {
-    font-family: 'GongGothicMedium';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+   font-family: 'S-CoreDream-3Light';
+   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+   font-weight: normal;
+   font-style: normal;
 }
 
 * {
