--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,6 +12,8 @@
   align-items: center;
   padding:1rem; 
   box-sizing: border-box;
+  background-color:#fff;
+  border-bottom:1px solid #ececec
 }
 
 #header .left,
@@ -80,10 +82,10 @@
 }
 
 #footer {
-  height: 3rem;
+  height: 4rem;
   flex-shrink: 0;
   background-color:#fff;
-  border-top:1px solid #f5f5f5
+  border-top:1px solid #ececec
 }
 
 #main_body {
