--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -93,7 +93,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'ONE-Mobile-POP';
+  font-family: 'Freesentation-7Bold';
   font-size:2rem;
   line-height:2.3rem;
 }
