--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,14 @@
   background-color: #fafafa;
 }
 
+#main_wrap button {
+  display:inline-block
+}
+
+#main_wrap button span {
+  display:none
+}
+
 #header {
   display: flex;
   width: 100%;
@@ -20,6 +28,11 @@
 #header .right {
   width: 10%;
   text-align: center;
+}
+
+#header btn {
+  width:3rem;
+  height:3rem
 }
 
 #header .title {
@@ -92,4 +105,27 @@
   flex-grow: 1;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
+}
+
+
+button.lnb {
+  background: url('../images/ico_lnb.png') no-repeat 0 0/100%;
+}
+button.calendar {
+  background: url('../images/ico_calendar.png') no-repeat 0 0/100%;
+}
+button.add {
+  width:4rem;height:4rem;background: url('../images/ico_add.png') no-repeat 0 0/100%;
+}
+button.home {
+  background: url('../images/ico_home.png') no-repeat 0 0/100%;
+}
+button.like {
+  background: url('../images/ico_share.png') no-repeat 0 0/100%;
+}
+button.share {
+  background: url('../images/ico_share.png') no-repeat 0 0/100%;
+}
+button.setting {
+  background: url('../images/ico_setting.png') no-repeat 0 0/100%;
 }
