--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -115,7 +115,12 @@ button.calendar {
   background: url('../images/ico_calendar.png') no-repeat 0 0/100%;
 }
 button.add {
-  width:4rem;height:4rem;background: url('../images/ico_add.png') no-repeat 0 0/100%;
+  width:4rem;
+  height:4rem;
+  position:fixed;
+  right:1rem;
+  bottom:5rem;
+  background: url('../images/ico_add.png') no-repeat 0 0/100%;
 }
 button.home {
   background: url('../images/ico_home.png') no-repeat 0 0/100%;
