--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -119,7 +119,8 @@ button.add {
   height:4rem;
   position:fixed;
   right:1rem;
-  bottom:5rem;
+  bottom:15rem;
+  border:1px solid red;
   background: url('../images/ico_add.png') no-repeat 0 0/100%;
 }
 button.home {
