--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -30,9 +30,10 @@
   text-align: center;
 }
 
-#header btn {
-  width:3rem;
-  height:3rem
+#header boutton,
+#footer boutton {
+  width:2.5rem;
+  height:2.5rem
 }
 
 #header .title {
@@ -97,8 +98,16 @@
 #footer {
   height: 4rem;
   flex-shrink: 0;
-  background-color:#fff;
-  border-top:1px solid #ececec
+  background-color: #fff;
+  border-top: 1px solid #ececec;
+  display: flex;
+  justify-content: space-around; 
+  align-items: center;         
+}
+
+#footer .button {
+  width:80%;
+  margin:0 auto;
 }
 
 #main_body {
