--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -32,8 +32,8 @@
 
 #header button,
 #footer button {
-  width:2.5rem;
-  height:2.5rem
+  width:2rem;
+  height:2rem
 }
 
 #header .title {
@@ -102,7 +102,8 @@
   border-top: 1px solid #ececec;
   display: flex;
   justify-content: space-around; 
-  align-items: center;         
+  align-items: center;   
+  gap:1.5rem
 }
 
 #footer .button {
