--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -131,7 +131,9 @@ button.add {
   position:fixed;
   right:1rem;
   bottom:5rem;
+  border-radius:50%;
   background: url('../images/ico_add.png') no-repeat 0 0/100%;
+  background-color:#fff;
 }
 button.home {
   background: url('../images/ico_home.png') no-repeat 0 0/100%;
