--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -119,7 +119,7 @@
 
 #main_body .date_scroll {
   background-color: #fff;
-  padding: 0 2rem 2rem 2rem;
+  padding: 0 6rem 2rem 6rem;
   border-bottom: 1px solid #ececec;
 }
 
@@ -128,14 +128,14 @@
   display: flex;
   justify-content: center;    
   align-items: center;        
-  gap: 0.5rem;      
+  gap: 0.2rem;      
 }
 
 #main_body .date_scroll .date_group span {
   width: 3rem;
   height: 4rem;
   border: 1px solid #ddd;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   display: inline-block;       
   align-items: center;        
   justify-content: center; 
@@ -143,13 +143,15 @@
   font-size:1.2rem;
 }
 #main_body .date_scroll .date_group i {
-  display:inline-block;
+  display:block;
   color:#666;
+  text-decoration:normal;
   font-size:0.8rem;
 }
 #main_body .date_scroll .date_group span.on {
   color:#333;
-  font-weight:bold
+  font-weight:bold;
+  background-color:none;
 }
 
 button.lnb {
