--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -132,13 +132,18 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   white-space: nowrap;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
+#main_body .date_scroll::-webkit-scrollbar {
+  display: none;
 }
 
 #main_body .date_scroll .date_group span {
-  width: 3rem;
-  height: 4rem;
   border: 1px solid #ddd;
   border-radius: 0.5rem;
+  padding:1rem;
   display: inline-block;       
   align-items: center;        
   justify-content: center; 
@@ -151,7 +156,7 @@
   text-decoration:normal;
   font-size:0.8rem;
 }
-#main_body .date_scroll .date_group span.on {
+#main_body .date_scroll .date_group span.today {
   color:#333;
   font-weight:bold;
   background-color:none;
